# latexqol

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
latexqol/: conversion.py
src/latexqol/: conversion.py
tests/: test.py
