[metadata]
name = latexqol
version = 0.0.2
description = A module for converting arrays of data into a LaTeX formated table.
long_description = file: README.md, LICENSE.rst
author = Konrad Gjerstad
url = https://github.com/konradgj/latexqol
license = MIT
license_file = LICENSE
platforms = win32, osx, linux
classifiers = 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    pyperclip>=1.8

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src.latexqol